# jniopenssl

./: .gitignore
app/: CMakeLists.txt  app-release.apk  build.gradle  proguard-rules.pro  readme.md
app/src/androidTest/java/demo/rsa/gkbn/rsademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: My3DES.cpp  native-lib.cpp
app/src/main/java/demo/rsa/gkbn/rsademo/: App.java  DbHelper.java  JniDemo.java  MainActivity.java
app/src/main/java/demo/rsa/gkbn/rsademo/bean/dao/: User.java  UserDao.java
app/src/main/java/demo/rsa/gkbn/rsademo/sqlcore/: AbstactBaseDao.java  BaseDaoManager.java  DbField.java  DbTable.java  IBaseDao.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/demo/rsa/gkbn/rsademo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
